the magic is real

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 			rel="stylesheet"
 			href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/11.0.0/css/fabric.min.css"
 		/>
-		<title>Lets Brainstorm</title>
+		<title>💡 Brainstorming Copilot 🤖</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
